fix issue Menu card on showroom not aligned

--- a/client/Components/show_room/show_room.css
+++ b/client/Components/show_room/show_room.css
@@ -196,6 +196,7 @@
   position: relative;
   min-height: 340px!important;
   margin-bottom: 24px;
+  height: 360px;
 }
 .kitchen-wrapper {
   position: relative;
